Header: Set logo to `fit-content` to prevent pushing the locale off screen
Fixes #399

--- a/mu-plugins/blocks/global-header-footer/postcss/header/logos.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/logos.pcss
@@ -9,7 +9,7 @@
 	}
 
 	& .wp-block-image.global-header__wporg-logo-mark {
-		flex-basis: 100%;
+		flex-basis: fit-content;
 		flex-shrink: 1;
 		text-align: left;
 
